objects/scormanywhere__Catalog__c.object
<CustomObject>
    <fields>
        <fullName>scormanywhere__Allow_Self_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Self-Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Autoplay__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Autoplay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enforce_Sequence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Thumbnail_Path__c</fullName>
        <label>Thumbnail Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Media Catalog</label>
    <listViews>
        <fullName>scormanywhere__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Catalogs</pluralLabel>
    <recordTypes>
        <fullName>scormanywhere__Playlist</fullName>
        <active>true</active>
        <label>Playlist</label>
    </recordTypes>
    <recordTypes>
        <fullName>scormanywhere__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>scormanywhere__Order_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>scormanywhere__Order__c &lt; 0</errorConditionFormula>
        <errorMessage>Order should be 0 or above</errorMessage>
    </validationRules>
</CustomObject>